# beep-beep-server

./: .gitignore  Cargo.toml  README.md  schema.cddl
db/: Cargo.toml
db/migrations/2020-03-03-161146_create_messages/: up.sql
db/src/: db.rs  lib.rs  schema.rs
db/src/models/: messages.rs
graphql/: Cargo.toml
graphql/src/: context.rs  lib.rs  mutation.rs  query.rs  schema.rs  test.rs
http/: Cargo.toml
http/src/: lib.rs  server.rs
node/: Cargo.toml
node/src/: main.rs  storage.rs
